syntax = "proto3";
package com.qxdzbc.p6.proto;

import "com/qxdzbc/p6/proto/CommonProtos.proto";
import "com/qxdzbc/p6/proto/DocProtos.proto";

message DeleteWorksheetRequestProto{
  WorkbookKeyProto workbookKey = 1;
  string targetWorksheet = 2;
}

message DeleteWorksheetResponseProto{
  WorkbookKeyProto workbookKey = 1;
  string targetWorksheet = 2;
  bool isError = 3;
  ErrorReportProto errorReport = 4;
}

message WorkbookUpdateCommonResponseProto{
  bool isError = 1;
  optional ErrorReportProto errorReport = 2;
  optional WorkbookKeyProto workbookKey = 3;
  optional WorkbookProto newWorkbook = 4;
  optional string windowId=5;
}


message WorksheetWithErrorReportMsgProto{
  optional string wsName = 1;
  optional ErrorReportProto errorReport = 2;
}

message SetWbKeyRequestProto{
  WorkbookKeyProto wbKey=1;
  WorkbookKeyProto newWbKey = 2;
}

message RenameWorksheetRequestProto{
  WorkbookKeyProto wbKey = 1;
  string oldName = 2;
  string newName = 3;
}

message GetAllWorksheetsResponseProto{
  repeated WorksheetProto worksheets = 1;
  optional ErrorReportProto errorReport = 2;
}
message CreateNewWorksheetRequestProto{
  WorkbookKeyProto wbKey = 1;
  optional string newWorksheetName = 2;
}
message AddWorksheetRequestProto{
  WorkbookKeyProto wbKey = 1;
  WorksheetProto worksheet = 2;
}
